src/cqp_tree/frontends/grew/antlr/GrewParser.py
# Generated from Grew.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GrewParser ( Parser ):

    grammarFileName = "Grew.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'pattern'", "'with'", "'without'", "'{'", 
                     "';'", "'}'", "'|'", "':'", "'['", "','", "']'", "'!'", 
                     "'->'", "'-['", "']->'", "'^'", "'.'", "'re'", "'<'", 
                     "'<<'", "'='", "'<>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "IgnoredWhitespace", 
                      "IgnoredComments", "Identifier", "String", "PCREString" ]

    RULE_request = 0
    RULE_pattern = 1
    RULE_requestItem = 2
    RULE_body = 3
    RULE_clause = 4
    RULE_featureStructure = 5
    RULE_feature = 6
    RULE_arrow = 7
    RULE_edgeTypes = 8
    RULE_featureValue = 9
    RULE_literal = 10
    RULE_order = 11
    RULE_compare = 12

    ruleNames =  [ "request", "pattern", "requestItem", "body", "clause", 
                   "featureStructure", "feature", "arrow", "edgeTypes", 
                   "featureValue", "literal", "order", "compare" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    IgnoredWhitespace=23
    IgnoredComments=24
    Identifier=25
    String=26
    PCREString=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RequestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pattern(self):
            return self.getTypedRuleContext(GrewParser.PatternContext,0)


        def EOF(self):
            return self.getToken(GrewParser.EOF, 0)

        def requestItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrewParser.RequestItemContext)
            else:
                return self.getTypedRuleContext(GrewParser.RequestItemContext,i)


        def getRuleIndex(self):
            return GrewParser.RULE_request




    def request(self):

        localctx = GrewParser.RequestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_request)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.pattern()
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==3:
                self.state = 27
                self.requestItem()
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 33
            self.match(GrewParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(GrewParser.BodyContext,0)


        def getRuleIndex(self):
            return GrewParser.RULE_pattern




    def pattern(self):

        localctx = GrewParser.PatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_pattern)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(GrewParser.T__0)
            self.state = 36
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequestItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrewParser.RULE_requestItem

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WithItemContext(RequestItemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.RequestItemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def body(self):
            return self.getTypedRuleContext(GrewParser.BodyContext,0)



    class WithoutItemContext(RequestItemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.RequestItemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def body(self):
            return self.getTypedRuleContext(GrewParser.BodyContext,0)




    def requestItem(self):

        localctx = GrewParser.RequestItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_requestItem)
        try:
            self.state = 42
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                localctx = GrewParser.WithItemContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.match(GrewParser.T__1)
                self.state = 39
                self.body()
                pass
            elif token in [3]:
                localctx = GrewParser.WithoutItemContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.match(GrewParser.T__2)
                self.state = 41
                self.body()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def clause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrewParser.ClauseContext)
            else:
                return self.getTypedRuleContext(GrewParser.ClauseContext,i)


        def getRuleIndex(self):
            return GrewParser.RULE_body




    def body(self):

        localctx = GrewParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(GrewParser.T__3)
            self.state = 50
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 45
                    self.clause()
                    self.state = 46
                    self.match(GrewParser.T__4) 
                self.state = 52
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 235143168) != 0):
                self.state = 53
                self.clause()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5:
                    self.state = 54
                    self.match(GrewParser.T__4)




            self.state = 59
            self.match(GrewParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrewParser.RULE_clause

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ConstraintClauseContext(ClauseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.ClauseContext
            super().__init__(parser)
            self.lhs = None # FeatureValueContext
            self.rhs = None # FeatureValueContext
            self.copyFrom(ctx)

        def compare(self):
            return self.getTypedRuleContext(GrewParser.CompareContext,0)

        def featureValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrewParser.FeatureValueContext)
            else:
                return self.getTypedRuleContext(GrewParser.FeatureValueContext,i)



    class EdgeClauseContext(ClauseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.ClauseContext
            super().__init__(parser)
            self.label = None # Token
            self.src = None # Token
            self.dst = None # Token
            self.copyFrom(ctx)

        def arrow(self):
            return self.getTypedRuleContext(GrewParser.ArrowContext,0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(GrewParser.Identifier)
            else:
                return self.getToken(GrewParser.Identifier, i)


    class OrderClauseContext(ClauseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.ClauseContext
            super().__init__(parser)
            self.lhs = None # Token
            self.rhs = None # Token
            self.copyFrom(ctx)

        def order(self):
            return self.getTypedRuleContext(GrewParser.OrderContext,0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(GrewParser.Identifier)
            else:
                return self.getToken(GrewParser.Identifier, i)


    class NodeClauseContext(ClauseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.ClauseContext
            super().__init__(parser)
            self.label = None # Token
            self.copyFrom(ctx)

        def featureStructure(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrewParser.FeatureStructureContext)
            else:
                return self.getTypedRuleContext(GrewParser.FeatureStructureContext,i)

        def Identifier(self):
            return self.getToken(GrewParser.Identifier, 0)



    def clause(self):

        localctx = GrewParser.ClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_clause)
        self._la = 0 # Token type
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = GrewParser.NodeClauseContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                localctx.label = self.match(GrewParser.Identifier)
                self.state = 62
                self.featureStructure()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 63
                    self.match(GrewParser.T__6)
                    self.state = 64
                    self.featureStructure()
                    self.state = 69
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                localctx = GrewParser.EdgeClauseContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 70
                    localctx.label = self.match(GrewParser.Identifier)
                    self.state = 71
                    self.match(GrewParser.T__7)


                self.state = 74
                localctx.src = self.match(GrewParser.Identifier)
                self.state = 75
                self.arrow()
                self.state = 76
                localctx.dst = self.match(GrewParser.Identifier)
                pass

            elif la_ == 3:
                localctx = GrewParser.ConstraintClauseContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                localctx.lhs = self.featureValue()
                self.state = 79
                self.compare()
                self.state = 80
                localctx.rhs = self.featureValue()
                pass

            elif la_ == 4:
                localctx = GrewParser.OrderClauseContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                localctx.lhs = self.match(GrewParser.Identifier)
                self.state = 83
                self.order()
                self.state = 84
                localctx.rhs = self.match(GrewParser.Identifier)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureStructureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrewParser.FeatureContext)
            else:
                return self.getTypedRuleContext(GrewParser.FeatureContext,i)


        def getRuleIndex(self):
            return GrewParser.RULE_featureStructure




    def featureStructure(self):

        localctx = GrewParser.FeatureStructureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_featureStructure)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(GrewParser.T__8)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12 or _la==25:
                self.state = 89
                self.feature()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 90
                    self.match(GrewParser.T__9)
                    self.state = 91
                    self.feature()
                    self.state = 96
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 99
            self.match(GrewParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrewParser.RULE_feature

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RequiresContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(GrewParser.Identifier, 0)
        def compare(self):
            return self.getTypedRuleContext(GrewParser.CompareContext,0)

        def featureValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrewParser.FeatureValueContext)
            else:
                return self.getTypedRuleContext(GrewParser.FeatureValueContext,i)



    class PresenceContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(GrewParser.Identifier, 0)


    class AbsenceContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(GrewParser.Identifier, 0)



    def feature(self):

        localctx = GrewParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                localctx = GrewParser.PresenceContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(GrewParser.Identifier)
                pass

            elif la_ == 2:
                localctx = GrewParser.AbsenceContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(GrewParser.T__11)
                self.state = 103
                self.match(GrewParser.Identifier)
                pass

            elif la_ == 3:
                localctx = GrewParser.RequiresContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.match(GrewParser.Identifier)
                self.state = 105
                self.compare()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 235143168) != 0):
                    self.state = 106
                    self.featureValue()
                    self.state = 111
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==7:
                        self.state = 107
                        self.match(GrewParser.T__6)
                        self.state = 108
                        self.featureValue()
                        self.state = 113
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrewParser.RULE_arrow

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PositiveArrowContext(ArrowContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.ArrowContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def edgeTypes(self):
            return self.getTypedRuleContext(GrewParser.EdgeTypesContext,0)



    class NegatedArrowContext(ArrowContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.ArrowContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def edgeTypes(self):
            return self.getTypedRuleContext(GrewParser.EdgeTypesContext,0)



    class SimpleArrowContext(ArrowContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.ArrowContext
            super().__init__(parser)
            self.copyFrom(ctx)




    def arrow(self):

        localctx = GrewParser.ArrowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arrow)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                localctx = GrewParser.SimpleArrowContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(GrewParser.T__12)
                pass

            elif la_ == 2:
                localctx = GrewParser.PositiveArrowContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(GrewParser.T__13)
                self.state = 120
                self.edgeTypes()
                self.state = 121
                self.match(GrewParser.T__14)
                pass

            elif la_ == 3:
                localctx = GrewParser.NegatedArrowContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.match(GrewParser.T__13)
                self.state = 124
                self.match(GrewParser.T__15)
                self.state = 125
                self.edgeTypes()
                self.state = 126
                self.match(GrewParser.T__14)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeTypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrewParser.LiteralContext)
            else:
                return self.getTypedRuleContext(GrewParser.LiteralContext,i)


        def getRuleIndex(self):
            return GrewParser.RULE_edgeTypes




    def edgeTypes(self):

        localctx = GrewParser.EdgeTypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_edgeTypes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.literal()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 131
                self.match(GrewParser.T__6)
                self.state = 132
                self.literal()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrewParser.RULE_featureValue

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AttributeContext(FeatureValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.FeatureValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(GrewParser.Identifier)
            else:
                return self.getToken(GrewParser.Identifier, i)


    class ValueContext(FeatureValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.FeatureValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def literal(self):
            return self.getTypedRuleContext(GrewParser.LiteralContext,0)




    def featureValue(self):

        localctx = GrewParser.FeatureValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_featureValue)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                localctx = GrewParser.AttributeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(GrewParser.Identifier)
                self.state = 139
                self.match(GrewParser.T__16)
                self.state = 140
                self.match(GrewParser.Identifier)
                pass

            elif la_ == 2:
                localctx = GrewParser.ValueContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.literal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrewParser.RULE_literal

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PCREContext(LiteralContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PCREString(self):
            return self.getToken(GrewParser.PCREString, 0)


    class RegexContext(LiteralContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def String(self):
            return self.getToken(GrewParser.String, 0)


    class UnicodeStringContext(LiteralContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def String(self):
            return self.getToken(GrewParser.String, 0)


    class SimpleStringContext(LiteralContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(GrewParser.Identifier, 0)



    def literal(self):

        localctx = GrewParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_literal)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                localctx = GrewParser.UnicodeStringContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.match(GrewParser.String)
                pass
            elif token in [25]:
                localctx = GrewParser.SimpleStringContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(GrewParser.Identifier)
                pass
            elif token in [18]:
                localctx = GrewParser.RegexContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.match(GrewParser.T__17)
                self.state = 147
                self.match(GrewParser.String)
                pass
            elif token in [27]:
                localctx = GrewParser.PCREContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 148
                self.match(GrewParser.PCREString)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrewParser.RULE_order

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrecedenceContext(OrderContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.OrderContext
            super().__init__(parser)
            self.copyFrom(ctx)



    class ImmediatePrecedenceContext(OrderContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.OrderContext
            super().__init__(parser)
            self.copyFrom(ctx)




    def order(self):

        localctx = GrewParser.OrderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_order)
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                localctx = GrewParser.PrecedenceContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.match(GrewParser.T__18)
                pass
            elif token in [20]:
                localctx = GrewParser.ImmediatePrecedenceContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.match(GrewParser.T__19)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrewParser.RULE_compare

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EqualityContext(CompareContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.CompareContext
            super().__init__(parser)
            self.copyFrom(ctx)



    class InequalityContext(CompareContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GrewParser.CompareContext
            super().__init__(parser)
            self.copyFrom(ctx)




    def compare(self):

        localctx = GrewParser.CompareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_compare)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                localctx = GrewParser.EqualityContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.match(GrewParser.T__20)
                pass
            elif token in [22]:
                localctx = GrewParser.InequalityContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(GrewParser.T__21)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





